--- a/style.css
+++ b/style.css
@@ -144,3 +144,187 @@ background-color: rgb(156, 25, 25);
 .our_team{
     background: url(imagens/pagina-4.png);
 }
+
+
+.service1 h1 { 
+    position: absolute;
+width: 196px;
+height: 29px;
+left: 26px;
+top: 100px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 24px;
+
+
+}
+
+
+.service1 img{
+    position: absolute;
+left: 7.79%;
+right: 74.68%;
+top: 3.52%;
+bottom: 88.71%;
+background: url(image.png);
+}
+
+.service1 p{
+    position: absolute;
+width: 256px;
+height: 44px;
+left: 26px;
+top: 142px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+/* or 157% */
+
+letter-spacing: 0.5px;
+
+color: #ffffff;
+}
+
+
+
+
+.service3 h1{
+    position: absolute;
+left: 8.44%;
+right: 4.87%;
+top: 31.65%;
+bottom: 59.18%;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 24px;
+line-height: 30px;
+/* or 125% */
+
+letter-spacing: 0.35px;
+
+color: #000000;
+color: #ffffff;
+}
+
+.service3 p {
+position: absolute;
+left: 8.44%;
+right: 8.44%;
+top: 44.94%;
+bottom: 27.22%;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+/* or 157% */
+
+letter-spacing: 0.5px;
+
+color: #fffcfc;
+}
+
+.service3 img {
+
+}
+
+.service2 h1 {
+    position: absolute;
+width: 232px;
+height: 29px;
+left: 26px;
+top: 466px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 600;
+font-size: 24px;
+line-height: 30px;
+/* or 125% */
+
+letter-spacing: 0.35px;
+
+color: #ffffff;
+}
+
+.service2 p{
+    position: absolute;
+width: 256px;
+height: 132px;
+left: 26px;
+top: 508px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+/* or 157% */
+
+letter-spacing: 0.5px;
+
+color: #ffffff;
+}
+
+.service2 img{
+
+}
+
+
+
+
+.service4 h1{
+    position: absolute;
+    width: 132px;
+    height: 29px;
+    left: 26px;
+    top: 466px;
+    
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 30px;
+    /* or 125% */
+    
+    letter-spacing: 0.35px;
+    
+    color: #ffffff;
+    
+
+
+}
+
+.service p{
+position: absolute;
+width: 256px;
+height: 110px;
+left: 26px;
+top: 508px;
+
+font-family: 'Poppins';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 22px;
+/* or 157% */
+
+letter-spacing: 0.5px;
+
+color: #ffffff;
+
+}
+
+
+.service img{
+
+}
+
