--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ body h1 {
     color: #fff;
 }
 
-body p {
-    color: #fff;
-}
-
 .welcome , .who_we_are {
     height: 711px;
 }
@@ -38,6 +34,13 @@ body p {
     font-weight: 300;
 }
 
+.welcome_image img {
+    position: absolute;
+    width: 650px;
+    left: 700px;
+    opacity: 0.6;
+}
+
 .welcome_content{
     display: flex;
     flex-direction: column;
@@ -47,10 +50,11 @@ body p {
     left: 92px;
     top: 131px;
     gap: 32px;
+    text-align: justify;
 }
 
-.welcome_text {
-    justify-content: center;   
+.welcome_content h1 {
+    padding-bottom: 32px;
 }
 
 .welcome_button button {
@@ -61,8 +65,14 @@ body p {
     top:396px ;
     border: none;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.519);
+    cursor: pointer;
 
     background: linear-gradient(86.96deg, #5C80FF 4.36% , #1a52e4 93.5%) ;
+}
+
+button a {
+    text-decoration: none;
+    color: #fff;
 }
 
 .how_help_you{
@@ -76,10 +86,12 @@ body p {
     gap: 32px;
 
     position: absolute;
-    width: 418px;
+    width: 500px;
     height: 397px;
     left: 78px;
     top: 995px;
+    color: #fff;
+    text-align: justify;
 }
 
 .content_services {
@@ -88,14 +100,15 @@ body p {
     height: 682px;
     left: 769px;
     top: 815px;
-    background-color: lightblue;
+    background-color: #232323;
+    color: #000;
 }
 
 .group1{
     position: absolute;
     width: 308px;
     height: 682px;
-    background-color: #1a52e4;
+    background-color: #232323;
 }
 
 .group2{
@@ -103,38 +116,89 @@ body p {
     width: 308px;
     height: 682px;
     left: 358px;
-    background-color: #1a52e4;
+    background-color:#232323;
 }
 
-.service1{
-    background-color: rgb(156, 25, 25);
+.service1 {
     width: 308px;
     height: 316px;
+    background-color: #fff;
 }
 
-.service2{
+.service2 {
     width: 308px;
     height: 316px;
-    top: 366px;
-    background-color: rgb(156, 25, 25);
+    background-color: #fff;
+    margin-top: 50px;    
 }
+
 .service3 {
- position: absolute;
-width: 308px;
-height: 316px;
-left: 0px;
-top: 0px;
-background-color: rgb(156, 25, 25);
+    width: 308px;
+    height: 316px;
+    background-color: #fff;
+}
 
-    }
+.service4 {
+    width: 308px;
+    height: 316px;
+    background-color: #fff;
+    margin-top: 50px;    
+}
 
-.service4{
-position: absolute;
-width: 308px;
-height: 316px;
-left: 0px;
-top: 366px;
-background-color: rgb(156, 25, 25);
+.service1 h2 , .service3 h2 {
+    position: absolute;
+    left: 26px;
+    top: 100px;
+}
+
+.service2 h2 , .service4 h2 {
+    position: absolute;
+    left: 26px;
+    top: 466px;
+}
+
+.service1 p , .service3 p {
+    position: absolute;
+    left: 26px;
+    top: 142px;
+}
+
+.service2 p , .service4 p {
+    position: absolute;
+    left: 26px;
+    top: 508px;
+}
+
+.service1 img {
+    width: 84px;
+    height: 64px;
+    position: absolute;
+    left: 26px;
+    top: 10px;    
+}
+
+.service2 img {
+    position: absolute;
+width: 60px;
+height: 68px;
+left: 25px;
+top: 382px;
+}
+
+.service3 img {
+    width: 64px;
+    height: 60px;
+    position: absolute;
+    left: 26px;
+    top: 10px;    
+}
+
+.service4 img {
+    position: absolute;
+width: 60px;
+height: 63px;
+left: 25px;
+top: 382px;
 }
 
 .who_we_are{
@@ -142,189 +206,26 @@ background-color: rgb(156, 25, 25);
 }
 
 .our_team{
-    background: url(imagens/pagina-4.png);
+    background: url(imagens/pagina-4.png) ;
 }
 
-
-.service1 h1 { 
+.who_we_are_content {
+    color: #fff;
     position: absolute;
-width: 196px;
-height: 29px;
-left: 26px;
-top: 100px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 24px;
-
-
+    width: 500px;
+    left: 78px;
+    top: 1805px;
 }
 
+.who_we_are_content h1 {
+    padding-bottom: 32px;
+}
 
-.service1 img{
+.who_we_are_img img {
     position: absolute;
-left: 7.79%;
-right: 74.68%;
-top: 3.52%;
-bottom: 88.71%;
-background: url(image.png);
+width: 659px;
+height: 449.78px;
+left: 769px;
+top: 1755px;
+border-radius: 20px;
 }
-
-.service1 p{
-    position: absolute;
-width: 256px;
-height: 44px;
-left: 26px;
-top: 142px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 22px;
-/* or 157% */
-
-letter-spacing: 0.5px;
-
-color: #ffffff;
-}
-
-
-
-
-.service3 h1{
-    position: absolute;
-left: 8.44%;
-right: 4.87%;
-top: 31.65%;
-bottom: 59.18%;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 24px;
-line-height: 30px;
-/* or 125% */
-
-letter-spacing: 0.35px;
-
-color: #000000;
-color: #ffffff;
-}
-
-.service3 p {
-position: absolute;
-left: 8.44%;
-right: 8.44%;
-top: 44.94%;
-bottom: 27.22%;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 22px;
-/* or 157% */
-
-letter-spacing: 0.5px;
-
-color: #fffcfc;
-}
-
-.service3 img {
-
-}
-
-.service2 h1 {
-    position: absolute;
-width: 232px;
-height: 29px;
-left: 26px;
-top: 466px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 600;
-font-size: 24px;
-line-height: 30px;
-/* or 125% */
-
-letter-spacing: 0.35px;
-
-color: #ffffff;
-}
-
-.service2 p{
-    position: absolute;
-width: 256px;
-height: 132px;
-left: 26px;
-top: 508px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 22px;
-/* or 157% */
-
-letter-spacing: 0.5px;
-
-color: #ffffff;
-}
-
-.service2 img{
-
-}
-
-
-
-
-.service4 h1{
-    position: absolute;
-    width: 132px;
-    height: 29px;
-    left: 26px;
-    top: 466px;
-    
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 30px;
-    /* or 125% */
-    
-    letter-spacing: 0.35px;
-    
-    color: #ffffff;
-    
-
-
-}
-
-.service p{
-position: absolute;
-width: 256px;
-height: 110px;
-left: 26px;
-top: 508px;
-
-font-family: 'Poppins';
-font-style: normal;
-font-weight: 400;
-font-size: 14px;
-line-height: 22px;
-/* or 157% */
-
-letter-spacing: 0.5px;
-
-color: #ffffff;
-
-}
-
-
-.service img{
-
-}
-
