Declarei sua div, sua foto. Mas não consegui posicionar correto.
Caso precise do que eu coloquei antes da div dos nomes ta aí:
<div class="nicolas">
               <img src="/imagens/nicolas.jpg" alt="Foto do Nicolas">
                </div>
                <div class="mateus">
                    <img src="/imagens/murilo.jpg" alt="Foto do Mateus">
                </div>
                <div class="tiago_">
                    <img src="/imagens/nicolas.jpg" alt="Foto do Tiago">
                </div>
                <div class="bandeira">
                    <img src="/imagens/murilo.jpg" alt="Foto do Bandeira">
                </div>

--- a/style.css
+++ b/style.css
@@ -231,3 +231,59 @@ left: 769px;
 top: 1755px;
 border-radius: 20px;
 }
+
+
+
+
+.our_team_content{
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 40px;
+width: 1371px;
+height: 411px;
+flex: none;
+order: 1;
+flex-grow: 0;
+}
+
+.our_team_divs{
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 40px;
+    
+width: 1371px;
+height: 411px;
+}
+
+.murilo{
+    position: absolute;
+    width: 308px;
+    height: 411px;
+    left: 0px;
+    top: 0px;
+    
+    background: #FFFFFF;
+    border-radius: 30px;
+
+background: #FFFFFF;
+border-radius: 30px;
+
+}
+
+.murilo img{
+position: absolute;
+width: 308px;
+height: 241.76px;
+left: 0px;
+top: 0px;
+border-radius: 30px 30px 0px 0px;
+}
+
+
+
+
+
