--- a/style.css
+++ b/style.css
@@ -3,14 +3,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 *{
-    padding: 0;
-    margin: 0;
+    
     font-family: 'Poppins', sans-serif;    
 }
 
 body {
     height: 100vh;
-    width: 1519px;
+    width: 100vw;
+    padding: 0;
+    margin: 0;
 }
 
 body h1 {
@@ -29,6 +30,7 @@ body h1 {
     color: #fff;
     font-weight: 300;
     height: 711px; 
+    width: 100%;
 }
 
 .welcome_image img {
@@ -50,10 +52,6 @@ body h1 {
     text-align: justify;
 }
 
-.welcome_content h1 {
-    padding-bottom: 32px;
-}
-
 .welcome_button button {
     border-radius: 20px;
     width: 247px;
@@ -63,6 +61,7 @@ body h1 {
     border: none;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.519);
     cursor: pointer;
+    margin-top: 31px;
 
     background: linear-gradient(86.96deg, #5C80FF 4.36% , #1a52e4 93.5%) ;
 }
@@ -75,20 +74,16 @@ button a {
 .how_help_you{
     background-image: url(imagens/pagina-2.png);
     height:929px ;
+    width: 100%;
     background-size: cover;
 }
 
 .how_help_content{
-    display: flex;
-    flex-direction: column;
-    padding: 0px;
-    gap: 32px;
-
     position: absolute;
     width: 500px;
     height: 397px;
     left: 78px;
-    top: 995px;
+    top: 945px;
     color: #fff;
     text-align: justify;
 }
@@ -98,74 +93,75 @@ button a {
     width: 666px;
     height: 682px;
     left: 769px;
-    top: 815px;
+    top: 865px;
     background-color: #232323;
     color: #000;
 }
 
 .group1{
     position: absolute;
-    width: 308px;
+    width: 280px;
     height: 682px;
     background-color: #232323;
 }
 
 .group2{
     position: absolute;
-    width: 308px;
+    width: 280px;
     height: 682px;
     left: 358px;
     background-color:#232323;
 }
 
 .service1 {
-    width: 308px;
-    height: 316px;
+    width: 280px;
+    height: 286px;
     background-color: #fff;
 }
 
 .service2 {
-    width: 308px;
-    height: 316px;
+    width: 280px;
+    height: 286px;
     background-color: #fff;
     margin-top: 50px;    
 }
 
 .service3 {
-    width: 308px;
-    height: 316px;
+    width: 280px;
+    height: 286px;
     background-color: #fff;
 }
 
 .service4 {
-    width: 308px;
-    height: 316px;
+    width: 280px;
+    height: 286px;
     background-color: #fff;
     margin-top: 50px;    
 }
 
 .service1 h2 , .service3 h2 {
     position: absolute;
-    left: 26px;
-    top: 100px;
+    left: 12px;
+    top: 65px;
 }
 
 .service2 h2 , .service4 h2 {
     position: absolute;
-    left: 26px;
-    top: 466px;
+    left: 12px;
+    top: 430px;
 }
 
 .service1 p , .service3 p {
     position: absolute;
-    left: 26px;
-    top: 142px;
+    left: 5px;
+    top: 122px;
 }
 
 .service2 p , .service4 p {
     position: absolute;
-    left: 26px;
-    top: 508px;
+    left: 5px;
+    top: 480px;
+
 }
 
 .service1 img {
@@ -173,7 +169,7 @@ button a {
     height: 64px;
     position: absolute;
     left: 26px;
-    top: 10px;    
+    top: 14px;    
 }
 
 .service2 img {
@@ -181,7 +177,7 @@ button a {
 width: 60px;
 height: 68px;
 left: 25px;
-top: 382px;
+top: 362px;
 }
 
 .service3 img {
@@ -197,12 +193,13 @@ top: 382px;
 width: 60px;
 height: 63px;
 left: 25px;
-top: 382px;
+top: 362px;
 }
 
 .who_we_are{
     background: url(imagens/pagina-3.png);
-    height: 711px; 
+    height: 741px; 
+    width: 100%;
     background-size: cover;
     
 }
@@ -231,6 +228,74 @@ top: 382px;
 
 .our_team{
     background: url(imagens/pagina-4.png) ;
-    height: 752px;
     background-size: cover;
+    width: 100%;
+    height: 752px;
+    position: absolute;
+}
+
+.our_team h1{
+    padding-left: 92px;
+}
+
+.team_div{
+    position: absolute;
+width: 1394px;
+height: 447px;
+left: 77px;
+}
+
+.team {
+    display: flex;
+flex-direction: row;
+align-items: flex-start;
+padding: 0px;
+gap: 40px;
+width: 1371px;
+height: 411px;
+}
+
+.colaborator {
+    width: 250px;
+    height: 400px;
+    background-color: #fff;
+    border-radius: 30px;
+}
+
+.colaborator img {
+    width: 250px;
+    height: 241px;
+    border-radius: 30px 30px 0px 0px;
+}
+
+.colaborator h2 , p {
+   padding-left: 10px;
+}
+
+.grow_together {
+    position: absolute;
+width: 1354px;
+height: 140px;
+left: 91px;
+top:580px ;
+background-color: #1a52e4;
+border-radius: 20px;
+}
+
+.grow_text {
+    display: flex;
+flex-direction: row;
+justify-content: space-around;
+align-items: center;
+padding: 0px;
+gap: 35px;
+
+}
+
+.grow_text button {
+width: 340px;
+height: 87.48px;
+font-size: 25px;
+background: linear-gradient(86.96deg, #5C80FF 4.36%, #1A52E4 93.5%);
+border-radius: 20px;
 }
