--- a/style.css
+++ b/style.css
@@ -30,13 +30,12 @@ body h1 {
     color: #fff;
     font-weight: 300;
     height: 711px; 
-    width: 100%;
+    width: 100vw;
 }
 
 .welcome_image img {
-position: absolute;
 width: 217px;
-left: 74px;
+padding-left: 44px;
 
     
 }
@@ -44,7 +43,7 @@ left: 74px;
 .welcome_content{
     display: flex;
     flex-direction: column;
-    width: 511px;
+    width: 551px;
     height: 431px;
     position: absolute;
     left: 92px;
@@ -77,44 +76,46 @@ button a {
 
 .how_help_you{
     background-image: url(imagens/pagina-2.png);
-    height:929px ;
-    width: 100%;
+    height:100vh ;
+    width: 100vw;
     background-size: cover;
+    display: flex;
+    justify-content: space-around;
 }
 
 .how_help_content{
-    position: absolute;
+    /* position: absolute; */
     width: 500px;
     height: 397px;
-    left: 78px;
-    top: 945px;
+    /* left: 78px;
+    top: 945px; */
     color: #fff;
     text-align: justify;
 }
 
 .content_services {
-    position: absolute;
-    width: 666px;
-    height: 682px;
-    left: 769px;
-    top: 865px;
-    background-color: #232323;
+    /* position: absolute; */
+    width: 606px;
+    height: 602px;
+    display: flex;
+    justify-content: space-between;
+    /* left: 769px;
+    top: 865px; */
+    /* background-color: #232323; */
     color: #000;
 }
 
 .group1{
-    position: absolute;
+    /* position: absolute; */
     width: 280px;
     height: 682px;
-    background-color: #232323;
 }
 
 .group2{
-    position: absolute;
+    /* position: absolute; */
     width: 280px;
     height: 682px;
-    left: 358px;
-    background-color:#232323;
+    /* left: 358px; */
 }
 
 .service1 {
@@ -143,69 +144,69 @@ button a {
     margin-top: 50px;    
 }
 
-.service1 h2 , .service3 h2 {
-    position: absolute;
+/* .service1 h2 , .service3 h2 {
+    /* position: absolute;
     left: 12px;
-    top: 65px;
+    top: 65px; 
 }
 
 .service2 h2 , .service4 h2 {
-    position: absolute;
+    /* position: absolute;
     left: 12px;
-    top: 430px;
+    top: 430px; 
 }
 
 .service1 p , .service3 p {
-    position: absolute;
+    /* position: absolute;
     left: 5px;
-    top: 122px;
+    top: 122px; 
 }
 
 .service2 p , .service4 p {
-    position: absolute;
+    /* position: absolute;
     left: 5px;
-    top: 480px;
+    top: 480px; }*/
 
-}
 
 .service1 img {
     width: 84px;
     height: 64px;
-    position: absolute;
+    /* position: absolute;
     left: 26px;
-    top: 14px;    
+    top: 14px;     */
 }
 
 .service2 img {
-position: absolute;
+/* position: absolute; */
 width: 60px;
 height: 68px;
-left: 25px;
-top: 362px;
+/* left: 25px;
+top: 362px; */
 }
 
 .service3 img {
     width: 64px;
     height: 60px;
-    position: absolute;
+    /* position: absolute;
     left: 26px;
-    top: 10px;    
+    top: 10px;     */
 }
 
 .service4 img {
- position: absolute;
+ /* position: absolute; */
 width: 60px;
 height: 63px;
-left: 25px;
-top: 362px;
+/* left: 25px;
+top: 362px; */
 }
 
 .who_we_are{
     background: url(imagens/pagina-3.png);
-    height: 741px; 
-    width: 100%;
+    height: 100vh; 
+    width: 100vw;
     background-size: cover;
-    
+    display: flex;
+    flex-direction: row;    
 }
 
 
@@ -233,26 +234,23 @@ top: 362px;
 .our_team{
     background: url(imagens/pagina-4.png) ;
     background-size: cover;
-    width: 100%;
-    height: 752px;
-    position: absolute;
+    width: 100vw;
+    height: 100vw;
 }
 
-.our_team h1{
-    padding-left: 92px;
-}
 
 .team_div{
-position:absolute;
-width: 1394px;
-height: 447px;
-left: 350px;
+/* position:absolute; */
+    width: 1394px;
+    height: 447px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .team {
 display: flex;
 flex-direction: row;
-align-items: flex-start;
 padding: 0px;
 gap: 40px;
 width: 1371px;
@@ -280,11 +278,9 @@ height: 411px;
 }
 
 .grow_together {
-position: absolute;
+margin-top: 32px;
 width: 1354px;
 height: 140px;
-left: 370px;
-top:580px ;
 background-color: #1a52e4;
 border-radius: 20px;
 }
