--- a/style2.css
+++ b/style2.css
@@ -19,7 +19,7 @@ body p {
 }
 
 .bemvindo {
-    width: 98vw;
+    width: 100vw;
     background-image: url(imagens/pagina-1.png);
     height: 100vh;
     background-size: cover;
@@ -55,7 +55,7 @@ button a {
 .como_vamos_te_ajudar {
     background: url(imagens/pagina-2.png);
     background-size: cover;
-    width: 98vw;
+    width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -81,7 +81,7 @@ button a {
     gap: 50px;
 }
 
-.servicos1 {
+.servicos {
     background-color: #ffffff;
     width: 250px;
     height: 250px;
@@ -90,231 +90,21 @@ button a {
     flex-direction: column;
 }
 
-.servicos1 h2 {
+.servicos h2 {
     padding-left: 10px;
-    font-size: larger;
 }
-.servicos1 p{
-    
-    left: 26px;
-    top: 480px;
-    height: 44px;
+.servicos p{
     padding-left:10px;
     color: black;
-    
-;
 }
 
-.servicos1 img{
+.servicos img{
+    padding-left: 10px;
+    padding-top: 15px;
     width: 64px;
     height: 60px;
 
 }
-
-
-
-
-
-.servicos2 {
-    background-color: #ffffff;
-    width: 250px;
-    height: 250px;
-    color: black;
-    display:flex;
-    flex-direction: column;
-}
-
-.servicos2 h2 {
-    padding-left: 10px;
-    font-size: larger;
-}
-.servicos2 p{
-    
-    left: 26px;
-    top: 480px;
-    height: 44px;
-    padding-left:10px;
-    color: black;
-    
-;
-}
-
-.servicos2 img{
-    width: 64px;
-    height: 60px;
-
-}
-
-
-
-.servicos3 {
-    background-color: #ffffff;
-    width: 250px;
-    height: 250px;
-    color: black;
-    display:flex;
-    flex-direction: column;
-}
-
-.servicos3 h2 {
-    padding-left: 10px;
-    font-size: larger;
-}
-.servicos3 p{
-    
-    left: 26px;
-    top: 480px;
-    height: 44px;
-    padding-left:10px;
-    color: black;
-    
-;
-}
-
-.servicos3 img{
-    width: 64px;
-    height: 60px;
-
-}
-
-
-
-
-.servicos2 {
-    background-color: #ffffff;
-    width: 250px;
-    height: 250px;
-    color: black;
-    display:flex;
-    flex-direction: column;
-}
-
-.servicos2 h2 {
-    padding-left: 10px;
-    font-size: larger;
-}
-.servicos2 p{
-    
-    left: 26px;
-    top: 480px;
-    height: 44px;
-    padding-left:10px;
-    color: black;
-    
-;
-}
-
-.servicos2 img{
-    width: 64px;
-    height: 60px;
-
-}
-
-
-
-.servicos3 {
-    background-color: #ffffff;
-    width: 250px;
-    height: 250px;
-    color: black;
-    display:flex;
-    flex-direction: column;
-}
-
-.servicos3 h2 {
-    padding-left: 10px;
-    font-size: larger;
-}
-.servicos3 p{
-    
-    left: 26px;
-    top: 480px;
-    height: 44px;
-    padding-left:10px;
-    color: black;
-    
-;
-}
-
-.servicos3 img{
-    width: 64px;
-    height: 60px;
-
-}
-
-
-.servicos3 {
-    background-color: #ffffff;
-    width: 250px;
-    height: 250px;
-    color: black;
-    display:flex;
-    flex-direction: column;
-}
-
-.servicos3 h2 {
-    padding-left: 10px;
-    font-size: larger;
-}
-.servicos3 p{
-    
-    left: 26px;
-    top: 480px;
-    height: 44px;
-    padding-left:10px;
-    color: black;
-    
-;
-}
-
-.servicos3 img{
-    width: 64px;
-    height: 60px;
-
-}
-
-
-
-.servicos4 {
-    background-color: #ffffff;
-    width: 250px;
-    height: 250px;
-    color: black;
-    display:flex;
-    flex-direction: column;
-}
-
-.servicos4 h2 {
-    padding-left: 10px;
-    font-size: larger;
-}
-.servicos4 p{
-    
-    left: 26px;
-    top: 480px;
-    height: 44px;
-    padding-left:10px;
-    color: black;
-    
-;
-}
-
-.servicos4 img{
-    width: 64px;
-    height: 60px;
-
-}
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -322,11 +112,13 @@ button a {
 .quem_somos_nos {
     background: url(imagens/pagina-3.png);
     background-size: cover;
-    width: 98vw;
+    width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
-
-
 
 .quem_somos_nos_text {
     width: 550px;
@@ -339,11 +131,9 @@ button a {
     justify-content: center;
 }
 
-.quem_somos_nos img{
-    width: 659px;
-    height: 449.78px;
-    left: px;
-    top: 1755px;
+.quem_somos_nos_img img{
+    width: 609px;
+    height: 450px;
     border-radius: 20px;
 }
 
@@ -351,7 +141,69 @@ button a {
 .nosso_time {
     background: url(imagens/pagina-4.png);
     background-size: cover;
-    width: 98vw;
+    width: 100vw;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    padding-top: 50px;
 }
 
+.nosso_time h1 {
+    padding-left: 154px;
+}
+
+.div_nosso_time {
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    width: 1415px;
+    height: 430px;
+}
+
+.funcionarios {
+    width: 250px;
+    height: 400px;
+    background-color: #fff;
+    border-radius: 30px;
+    
+}
+
+.funcionarios p {
+    color: black;
+    padding-left: 20px;
+}
+
+.funcionarios h2 {
+    padding-left: 20px;
+}
+
+.funcionarios img {
+    width:250px ;
+    border-radius: 30px 30px 0px 0px;
+}
+
+.whatsapp {
+    position: fixed;  
+    height: 90px;
+    width: 90px;
+    bottom: 20px;
+    right: 52px; 
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+}
+
+.whatsapp p {
+    width: 120px;
+    font-size: small;
+    color: #000;
+    background-color: #fff;
+    border-radius: 10px;
+    padding-left: 12px;
+}
+
+.whatsapp img {
+    width: 80px;
+    height:80px;
+}
