--- a/style2.css
+++ b/style2.css
@@ -175,7 +175,7 @@ button a {
 }
 
 .funcionarios h2 {
-    padding-left: 20px;
+    padding-left: 5px;
 }
 
 .funcionarios img {
@@ -201,9 +201,34 @@ button a {
     background-color: #fff;
     border-radius: 10px;
     padding-left: 12px;
+    text-decoration: solid;
+
 }
 
 .whatsapp img {
-    width: 80px;
-    height:80px;
+    width: 65px;
+    height:65px;
+    border-radius: 10px;
 }
+
+.rodape {
+    height:100vh;
+    width:100%; 
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center; 
+    
+    
+}
+
+.rodape img{
+    width: 65px;
+    height:65px;
+    border-radius: 10px;
+    margin: 0 15px;
+    padding: 10px 15px;
+}
+
+
+
