--- a/media.css
+++ b/media.css
@@ -15,6 +15,19 @@
     gap: 50px;
     }
 
+
+.header_links ul {
+    display: flex;
+    flex-wrap: wrap;
+    width: 225px;
+        column-gap: 15px;
+    
+}
+
+.header_links a {
+    padding-left: 25px;
+}
+
     .bemvindo img {
         width: 150px;
         height: 150px;
