--- a/style2.css
+++ b/style2.css
@@ -12,6 +12,11 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    min-width: 100%;
+    height: 100vh;
+}
+
 body h1 {
     font-weight: 600;
     font-size: 50px;
@@ -28,6 +33,7 @@ body p {
     justify-content: space-between;
     padding-right: 130px;
     height: 200px;
+    width: 100%;
 }
 
 .header_links ul {
@@ -52,7 +58,7 @@ body p {
 }
 
 .bemvindo {
-    width: 100vw;
+    width: 100%;
     background-image: url(imagens/pagina-1.png);
     height: 100vh;
     background-size: cover;
@@ -114,7 +120,7 @@ button a {
 .como_vamos_te_ajudar {
     background: url(imagens/pagina-2.png);
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -174,7 +180,7 @@ button a {
 .quem_somos_nos {
     background: url(imagens/pagina-3.png);
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -203,7 +209,7 @@ button a {
 .nosso_time {
     background: url(imagens/pagina-4.png);
     background-size: cover;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
