--- a/media.css
+++ b/media.css
@@ -268,6 +268,37 @@
         display: none;
     }
 
+
+    .bemvindocontent {
+        width: 90%;
+        padding-top: 0px;
+    }
+    
+    .bemvindotext {
+       width: 100%;
+        padding-left: 0px;
+    }
+
+    
+.header {
+    width: 90%;
+}
+
+.header_links ul {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 100%;
+    column-gap: 15px;
+       
+}
+
+.header_links a {
+    padding-left: 25px;
+
+    
+}
+
+
     .como_vamos_te_ajudar {
         background: url(imagens/pagina-2.png);
         width: 100vw;
@@ -280,7 +311,7 @@
     }
 
     .comoteajudar_text h1 {
-        width: 500px;
+        width: 90%;
         font-size: 40px;
         max-width: 768px;
     }
@@ -298,7 +329,7 @@
 
     .quem_somos_nos_img img {
         width: 80vw;
-        height: 40svw;
+        height: 40vw;
     }
 
     .nosso_time {
