--- a/media.css
+++ b/media.css
@@ -268,37 +268,6 @@
         display: none;
     }
 
-
-    .bemvindocontent {
-        width: 90%;
-        padding-top: 0px;
-    }
-    
-    .bemvindotext {
-       width: 100%;
-        padding-left: 0px;
-    }
-
-    
-.header {
-    width: 90%;
-}
-
-.header_links ul {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    column-gap: 15px;
-       
-}
-
-.header_links a {
-    padding-left: 25px;
-
-    
-}
-
-
     .como_vamos_te_ajudar {
         background: url(imagens/pagina-2.png);
         width: 100vw;
@@ -311,7 +280,7 @@
     }
 
     .comoteajudar_text h1 {
-        width: 90%;
+        width: 500px;
         font-size: 40px;
         max-width: 768px;
     }
@@ -329,7 +298,7 @@
 
     .quem_somos_nos_img img {
         width: 80vw;
-        height: 40vw;
+        height: 40svw;
     }
 
     .nosso_time {
