--- a/style2.css
+++ b/style2.css
@@ -12,11 +12,6 @@ html {
     scroll-behavior: smooth;
 }
 
-body {
-    min-width: 100%;
-    height: 100vh;
-}
-
 body h1 {
     font-weight: 600;
     font-size: 50px;
@@ -33,7 +28,6 @@ body p {
     justify-content: space-between;
     padding-right: 130px;
     height: 200px;
-    width: 100%;
 }
 
 .header_links ul {
@@ -58,7 +52,7 @@ body p {
 }
 
 .bemvindo {
-    width: 100%;
+    width: 100vw;
     background-image: url(imagens/pagina-1.png);
     height: 100vh;
     background-size: cover;
@@ -120,7 +114,7 @@ button a {
 .como_vamos_te_ajudar {
     background: url(imagens/pagina-2.png);
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -180,7 +174,7 @@ button a {
 .quem_somos_nos {
     background: url(imagens/pagina-3.png);
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: row;
@@ -209,7 +203,7 @@ button a {
 .nosso_time {
     background: url(imagens/pagina-4.png);
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
