--- a/media.css
+++ b/media.css
@@ -40,15 +40,24 @@
         padding-left: 4px; 
         padding-top: 30px;   
     }
+    .mockup {
+        display: none;
+    }
     
     .bemvindocontent {
-        width: 90vw;
+        width: 90%;
         height: 700px;
         padding-left: 14px;
     }
 
     .bemvindocontent h1 {
         font-size: 40px;
+    }
+
+    .bemvindotext {
+        width: 100%;
+        height: 100%;
+        padding-left: 0px;
     }
 
     .como_vamos_te_ajudar {
@@ -105,7 +114,7 @@
     .servicos p{
         padding-left:10px;
         color: black;
-        font-size: 14px;
+        font-size: 11px;
     }
     
     .servicos img{
@@ -252,11 +261,35 @@
         background-size: cover;
     }
 
+    
+
+.header_links ul {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 415px;
+    column-gap: 15px;
+       
+}
+
+.header_links a {
+    padding-left: 25px;
+
+    
+}
+
+
+    .bemvindotext {
+        width: 100%;
+        height: 100%;
+        padding-left: 0px;
+    }
+
     .como_vamos_te_ajudar {
         background: url(imagens/pagina-2.png);
         width: 100vw;
         height: 100vh;
         background-size: cover;
+
     }
 
     .comoteajudar_text{
