--- a/style2.css
+++ b/style2.css
@@ -63,18 +63,36 @@ body p {
 }
 
 .bemvindocontent {
-    width: 550px;
-    height: 600px;
+    width: 90%;
+}
+
+.bemvindotext {
+    width: 600px;
+    height: 500px;
     text-align: justify;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 12px;
     padding-left: 154px;
 }
 
+.mockup{
+    position: absolute;
+    top: 20px;
+    left: 700px;
+    width: 600px;
+}
 
+.mockup img {
+    width: 100%;
+}
+
+.bemvindotext p {
+    font-size: 14px;
+}
 
 button {
+    margin-top: 20px;
     width: 250px;
     height: 50px;
     border-radius: 20px;
