--- a/media.css
+++ b/media.css
@@ -25,6 +25,7 @@
     flex-wrap: wrap;
     width: 225px;
     column-gap: 15px;
+    row-gap: 20px;
        
 }
 
@@ -84,7 +85,7 @@
 
     .comoteajudar_text h1 {
             font-size: 37px;
-            width: 90%;
+            width: 100%;
     }
     
     .comoteajudar_servicos {
@@ -225,7 +226,6 @@
     width: 55px;
     height:55px;
     border-radius: 10px;
-    box-shadow: 2px 2px 1px  #ffffff;
     
 }
 
