--- a/style2.css
+++ b/style2.css
@@ -164,6 +164,52 @@ button a {
 
 }
 
+.service_plans {
+    background: url(imagens/pagina-dos-planos.jpg);
+    height: 100vh;
+    width: 100%;
+}
+
+.service_plans p  {
+    color: #000;
+    font-size: 0.8rem;
+}
+
+.plan  h2 {
+    color: #5C80FF;
+}
+
+.price {
+    font-size: 2.5rem;
+}
+
+
+.plantext p {
+    font-size: 0.8rem;
+}
+
+.plantext span {
+    font-size: 0.9rem;
+}
+
+.plantext h2 {
+    font-size: 1.2rem;
+}
+
+.plans {
+    width: 80%;
+    height: 620px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.plan {
+    background-color: #fff;
+    width: 30%;
+    height: 100%;
+}
+
 
 .quem_somos_nos {
     background: url(imagens/pagina-3.png);
