--- a/style2.css
+++ b/style2.css
@@ -178,12 +178,16 @@ button a {
 .service_plans p  {
     color: #fff;
     text-align: justify;
+    font-size: 18px;
 }
 
 .plan  h2  {
     color: #fff;
     font-size: 2rem;
     text-align: center;
+    padding-top: 20px;
+    
+        
 }
 
 .plan h3 {
@@ -234,6 +238,7 @@ button a {
     align-items: center;
     height: 50px;
     width: 100%;
+    font-size: 18px;
 }
 
 .price {
@@ -251,6 +256,7 @@ button a {
 
 .plan_objective h3{
 padding-bottom: 8px;
+font-size: 30px;
 }
 
 .plan_content {
@@ -266,7 +272,7 @@ padding-bottom: 8px;
 }
 
 .plan_included p {
-    font-size: 0.8rem;
+    font-size: 20px;
     padding-bottom: 12px;
     padding-top: 12px;
 }
@@ -278,6 +284,8 @@ padding-bottom: 8px;
 
 .plan_included h3 {
     padding-bottom: 16px;
+    font-size: 30px;
+
 }
 
 #button span {
