--- a/style2.css
+++ b/style2.css
@@ -67,7 +67,7 @@ body p {
 }
 
 .bemvindotext {
-    width: 600px;
+    width: 40%;
     height: 500px;
     text-align: justify;
     display: flex;
@@ -226,7 +226,6 @@ button a {
 
     width: 30%;
     height: 100%;
-    overflow: auto;
     border-radius: 16px;
     border: 3px solid #5C80FF;
     box-shadow: 3px 3px 3px rgba(255, 255, 255, 0.389);
